--- a/books/dguide/theme/custom.css
+++ b/books/dguide/theme/custom.css
@@ -3,7 +3,9 @@
   */
 
 :root {
-    --content-max-width: 40%;
+    --content-max-width: 90%;
+    padding-left: 1rem;
+    padding-right: 1rem;
 }
 
 p {
