[TD-1051] Adapt books to mdbook 5.0.0 (#931)

--- a/books/dguide/theme/custom.css
+++ b/books/dguide/theme/custom.css
@@ -11,3 +11,14 @@
 p {
     text-align: justify;
 }
+
+#menu-bar {
+    position: relative;
+}
+
+.menu-title {
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+    text-align: center;
+}
